<resources>
    <string name="no_record">Never before! :(</string>
    <string name="label">Utteru</string>
    <string name="app_name">Utteru</string>
    <string name="recharge_amount">Amount to recharge </string>
    <string name="ask_number_text">You Need to associate a number with facebook/Google.</string>
    <string name="login_text">Username/password are mandatory.</string>
    <string name="promo_code_text">Do you have any referral code?</string>
    <string name="balace_deduction">We are going to deduct amount of </string>
    <string name="promo_code_text1">If yes then enter referral code below and get 10% extra on your first recharge! </string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Unassign Access Number</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Search by number/country</string>
    <string name="common_search_hint">Search</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="auth_error">Authentication Error!!Try Again later</string>
    <string name="payment_error">Unable to initiate payment. Please try again later</string>
    <string name="ui_activity_title">Sign-in</string>
    <string name="ui_activity_authenticating">Authenticating\u2026</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="back_button_label">Back</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="profile_action">Sample profile</string>
    <string name="view_profile">View Profile</string>
    <string name="header_account_type">SampleSync contact</string>
    <string name="label_name">Name</string>
    <string name="label_phone_home">Home Phone</string>
    <string name="label_phone_mobile">Mobile Phone</string>
    <string name="label_phone_work">Work Phone</string>
    <string name="label_email">Email</string>
    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_activity_assign_access">AssignAccessActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="already_account">Already have an account?</string>
    <string name="signup_button">SIGN UP</string>
    <string name="mobile_number_hint">mobile number</string>
    <string name="username_hint">Username/MobileNumber/EmailId</string>
    <string name="password_hint">Password/PIN</string>
    <string name="signin_button">SIGN IN</string>
    <string name="facebook_button">Facebook</string>
    <string name="google_button">Google</string>
    <string name="forgot_password">Forgot PIN</string>
    <string name="forgotpass_detail_hint">Username/Email/Mobile</string>
    <string name="verify_text">Verify</string>
    <string name="proceed_text">Proceed</string>
    <string name="transfer_fund">Share</string>
    <string name="user_receive">User will receive :</string>
    <string name="forgotpass_message">What do you still remember</string>
    <string name="vc_message">Enter the four digit verification code sent to mobile number</string>
    <string name="ed_message">Enter the four digit verification code </string>
    <string name="resend">Resend code</string>
    <string name="other_number">Other No.</string>
    <string name="cp_message">Create your personal 4 digit PIN for</string>
    <string name="cp_password_hint">enter PIN </string>
    <string name="cp_password_confirmation">once again</string>
    <string name="resend_string">Successfully Code Resend</string>
    <string name="alpha_value">.33</string>
    <string name="alpha_value_low">.22</string>
    <string name="success_password">Password Changed Successfully</string>
    <string name="success_pin">Updated successfully</string>
    <string name="validUser">Valid User</string>
    <string name="validUser_msg">Please provide a valid User</string>
    <string name="success">Welcome</string>
    <string name="transferSuccess">Shared Talktime Successfully</string>
    <string name="back_press">Press once again to exit!</string>
    <string name="invalid_username">Please Enter UserName</string>
    <string name="invalid_userpassword">Please Enter Password</string>
    <string name="send_code">Send Code</string>
    <string name="select_email">Please select account</string>
    <string name="already_verified">This number is already verified.Please enter password to link emailId</string>
    <string name="enter_password">This number is alreay verified.Enter Password</string>
    <string name="select_verified_number">Choose your number to get verification code</string>
    <string name="missing_name">We miss your name</string>
    <string name="recharge_pin_text">Please enter your 14 digit pin</string>
    <string name="source_number_text">Source Number</string>
    <string name="destination_number_text">Destination Number</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_pin">Old Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="change_password_btn_text">Change</string>
    <string name="server_error">Could not connect to server</string>
    <string name="internet_error">No network available !!</string>
    <string name="payment_error1">Error Occurred while recharging.Please contact support</string>
    <string name="payment_cancle">Your Utteru recharge process has been cancelled!!</string>
    <string name="invalid_recharge">Invalid Recharge</string>
    <string name="parse_error">Error while fetching data</string>
    <string name="entert_pin">Please enter your 14 digit recharge PIN.</string>
    <string name="pin_length_valid">Recharge PIN must be of exactly 14 digits.</string>
    <string name="entert_pin_or_password">Please enter pin or password</string>
    <string name="empty_number">Enter the numbers first!</string>
    <string name="empty_pin">Please enter the PIN first</string>
    <string name="balance_validation">Sorry you do not have sufficient balance</string>
    <string name="balance_validation_decimal">Please enter valid amount</string>
    <string name="email_error">Please enter valid Email ID</string>
    <string name="fill_all">Please fill the proper details first.</string>
    <string name="share_message"> I suggest you to use Utteru for all your international calls.
You can use options like access numbers, two-way calling and web calling. Sign up using this link to get 10% extra on your 1st recharge.</string>
    <string name="manage_emails">Manage Verified Emails</string>
    <string name="reseller_msg">Service for resellers is not currently available</string>
    <string name="old_pass_error">Old password does not match</string>
    <string name="confirm_error">Confirmation does not match</string>
    <string name="old_pin_error">Old pin does not match</string>
    <string name="rech_via_pin">Recharge By Pin</string>
    <string name="two_way_call">Two way calling</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Reset Pin</string>
    <string name="last_update">Last updated on</string>
    <string name="my_num">My Numbers</string>
    <string name="my_emails">My Emails</string>
    <string name="my_profile">My Profile</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Phone</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="confirm_new_pin">Confirm PIN</string>
    <string name="reset_password_btn_text">Reset PIN</string>
    <string name="select_country">Add Number</string>
    <string name="transaction_title">Transactions</string>
    <string name="access_number_info">Access Number Info</string>
    <string name="call_fwd_msg">Own a dedicated number for any country you wish and forward it on your mobile or landline number.</string>
    <string name="stripe_text">Stripe Payment</string>
    <string name="call_rates_text">As selected state access number will cost you</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="earn_credit">Refer and Earn </string>
    <string name="invite_now">Invite Now</string>
    <string name="refferal_code_hint">Your Referral Code</string>
    <string name="last_updated">Last Update On</string>
    <string name="recharge_text">Recharge</string>
    <string name="number_validation">"Enter your number with '+' or '00' and CountryCode"</string>
    <string name="number_not_valid">Please enter a valid number</string>
    <string name="mobile_number_not_valid">Invalid Mobile Number</string>
    <string name="success_add">Added Successfully</string>
    <string name="success_message">Request Processed Successfully</string>
    <string name="settings">My Account</string>
    <string name="search_rate">Call Rates</string>
    <string name="pick_contact">Pick a contact</string>
    <string name="edit_data">Edit </string>
    <string name="manage_numbers">Manage Verified Numbers</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="fund_tranfer">Share Talktime</string>
    <string name="unique_code">Unique referral code</string>
    <string name="enter_user_name"> Transfer To </string>
    <string name="enter_fund">Amount</string>
    <string name="enter_new_data">Enter Here</string>
    <string name="enter_new_number">Enter Number  Here</string>
    <string name="enter_new_email">Enter Email Here</string>
    <string name="add_new_data">Add</string>
    <string name="cancel_add_new_data">Cancel</string>
    <string name="delete">Delete</string>
    <string name="make_default">Make it Default</string>
    <string name="cp_logs_title">CHANGED PIN HISTORY</string>
    <string name="buy_now_title">Buy Now</string>
    <string name="title_activity_select_country">"Select Country"</string>
    <string name="title_activity_select_access">"Select Access Number"</string>
    <string name="title_activity_select_state">"Select State"</string>
    <string name="title_activity_select_type">"Select Type"</string>
    <string name="title_activity_access_edit">Change Access Number</string>
    <string name="valid_input">abcdefghijklmnopqrstuvwxyz1234567890@.-_+</string>
</resources>