<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/sing_in_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_all"
        >

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logo" />

            <include
                layout="@layout/error_message_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:visibility="gone" />

            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_box_height"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/curve_corner_shape_layout"

                android:digits="@string/valid_input"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/padding_right_em"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:paddingLeft="@dimen/padding_left_em"
                android:paddingRight="@dimen/padding_left_em"
                android:textColor="@android:color/white"

                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_size" />

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_box_height"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/curve_corner_shape_layout"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="@dimen/padding_right_em"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingLeft="@dimen/padding_left_em"
                android:paddingRight="@dimen/padding_left_em"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_size" />

            <TextView
                android:id="@+id/sign_in_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/button_selector"
                android:text="@string/signin_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/facebook_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_weight="5"
                android:background="@drawable/fbbutton_selector"
                android:drawableLeft="@drawable/fb"
                android:drawablePadding="@dimen/padding_right_em"
                android:gravity="center_vertical"
                android:text="@string/facebook_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/google_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_weight="5"
                android:background="@drawable/fbbutton_selector"
                android:drawableLeft="@drawable/goo"
                android:drawablePadding="@dimen/padding_right_em"
                android:gravity="center_vertical"
                android:text="@string/google_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout

        android:id="@+id/dialpad_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/keyboard_bg"
            android:keyBackground="@drawable/key_background"
            android:keyTextColor="#666666"
            android:keyTextSize="25dp"
            android:shadowColor="@android:color/transparent" />


    </LinearLayout>
</FrameLayout>