<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_all"
        android:paddingBottom="@dimen/padding_bottom_em"
        android:paddingLeft="@dimen/padding_left_em"
        android:paddingRight="@dimen/padding_right_em"
        android:paddingTop="@dimen/padding_right_em" >

        <include
            layout="@layout/error_message_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/cp_old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/ed_inner_background"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLength="14"
            android:maxLines="1"
            android:paddingLeft="@dimen/edit_padding_left"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/edit_text_size" />

        <EditText
            android:id="@+id/cp_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/ed_inner_background"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="14"
            android:maxLines="1"
            android:paddingLeft="@dimen/edit_padding_left"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/edit_text_size" />

        <EditText
            android:id="@+id/cp_confirm_pwd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/ed_inner_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="14"
            android:maxLines="1"
            android:paddingLeft="@dimen/edit_padding_left"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/edit_text_size" />

        <Button
            android:id="@+id/cp_change_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/dark_black_button_selector_shape"
            android:text="@string/change_password_btn_text"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</LinearLayout>