<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:id="@+id/root_forgotpw"
    android:orientation="vertical"
    android:padding="@dimen/padding_all">

    <LinearLayout
        android:id="@+id/forgot_pass_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_pass_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/forgotpass_message"
            android:textColor="@android:color/white" />

        <include
            layout="@layout/error_message_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_pass_message"
            android:layout_marginTop="@dimen/margin_top"
            android:visibility="gone" />
    </LinearLayout>

    <EditText android:id="@+id/forgotpass_details"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/edit_box_height"
        android:layout_below="@id/forgot_pass_error_layout"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/curve_corner_shape_layout"
        android:digits="@string/valid_input"
        android:hint="@string/forgotpass_detail_hint"
        android:maxLines="1"
        android:paddingLeft="@dimen/padding_left_em"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/edit_text_size" />

    <Button
        android:id="@+id/forgotpass_button"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/forgotpass_details"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/button_selector"
        android:text="@string/verify_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/logo" />
    </LinearLayout>

</RelativeLayout>
    <LinearLayout

        android:id="@+id/dialpad_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/keyboard_bg"
            android:keyBackground="@drawable/key_background"
            android:keyTextColor="#666666"
            android:keyTextSize="25dp"
            android:shadowColor="@android:color/transparent" />


    </LinearLayout>

</FrameLayout>