<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:padding="@dimen/padding_all">

    <LinearLayout
        android:id="@+id/askpassword_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <include
            layout="@layout/error_message_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:visibility="gone" />
        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_number_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_medium_material"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/country_code_layout_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/curve_corner_shape_layout"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/verify_country_code"
                android:layout_width="@dimen/country_code_button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/country_code_button_selector"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edit_text_size" />

            <LinearLayout
                android:layout_width="@dimen/partition_line_width"
                android:layout_height="fill_parent"
                android:background="@android:color/white"></LinearLayout>

            <EditText
                android:id="@+id/verify_number_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_corner_shape_edittext"
                android:hint="@string/mobile_number_hint"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingLeft="@dimen/padding_left_em"
                android:paddingRight="@dimen/padding_left_em"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/verify_password_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="@dimen/country_code_layout_height"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/curve_corner_shape_layout"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/verify_password_text"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/curve_corner_shape_edittext"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/padding_left_em"
                    android:paddingRight="@dimen/padding_left_em"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/verify_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button

            android:id="@+id/verify_number_button"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/button_selector"
            android:text="@string/proceed_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/verify_number_login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/button_selector"
            android:text="@string/signin_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>



</FrameLayout>
    <LinearLayout

        android:id="@+id/dialpad_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/keyboard_bg"
            android:keyBackground="@drawable/key_background"
            android:keyTextColor="#666666"
            android:keyTextSize="25dp"
            android:shadowColor="@android:color/transparent" />


    </LinearLayout>
    </FrameLayout>